--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    background-image: url(https://mmc.tirto.id/image/otf/1024x535/2023/02/28/ilustrasi-matematika-istokc_ratio-16x9.jpg);
+    background-image: url(https://images.pexels.com/photos/5184960/pexels-photo-5184960.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
